--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,96 @@
-click==7.1.2
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
-gunicorn==20.0.4
-itsdangerous==1.1.0
-MarkupSafe==1.1.1
-SQLAlchemy==1.3.23
-Werkzeug==1.0.1
+altair
+argon2-cffi
+astor
+async-generator
+attrs
+backcall
+base58
+bleach
+blinker
+cachetools
+certifi
+cffi
+chardet
+click
+colorama
+dataclasses
+decorator
+defusedxml
+docopt
+entrypoints
+Flask
+gitdb
+GitPython
+google-trans-new
+gunicorn
+idna
+importlib-metadata
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+itsdangerous
+jedi
+Jinja2
+jsonschema
+jupyter-client
+jupyter-core
+jupyterlab-pygments
+jupyterlab-widgets
+MarkupSafe
+mistune
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+notebook
+numpy
+packaging
+pandas
+pandocfilters
+parso
+phonenumbers
+pickleshare
+Pillow
+pipreqs
+prometheus-client
+prompt-toolkit
+protobuf
+pyarrow
+pycparser
+pydeck
+Pygments
+pyparsing
+PyQt5
+PyQt5-sip
+pyqt5-tools
+pyrsistent
+python-dateutil
+python-dotenv
+pytz
+pywin32
+pywinpty
+pyzmq
+requests
+Send2Trash
+six
+smmap
+streamlit
+terminado
+testpath
+toml
+toolz
+tornado
+traitlets
+typing-extensions
+tzlocal
+urllib3
+validators
+watchdog
+wcwidth
+webencodings
+Werkzeug
+widgetsnbextension
+yarg
+zipp
+
